LOOKS: Fix target grade overlapping tutor feedback toolbar

--- a/src/less/modules/feedback-float-toolbar.less
+++ b/src/less/modules/feedback-float-toolbar.less
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    z-index: 2;
+    z-index: 1000;
     border-top-left-radius: 1em;
     margin: 0;
   }
@@ -11,7 +11,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 1000;
     border-top-right-radius: 1em;
     margin: 0;
   }
